refactor: Add SoftwareIcon type and update stack page layout

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,11 +4,11 @@ import Blog from '@/icons/Blog.astro'
 import Stack from '@/icons/Stack.astro'
 import Contact from '@/icons/Contact.astro'
 import NavLink from '@/components/navbar/NavLink.astro'
-import CmdK from '@/components/navbar/CmdK.astro'
+import CmdK from '@/components/CmdK.astro'
 ---
 
 <nav
-  class='dark:md:border-r-primary dark:border-t-primary dark:bg-primary fixed bottom-0 z-50 flex h-[65px] w-screen shrink-0 items-center justify-center border-t bg-white md:sticky md:top-0 md:h-screen md:w-[65px] md:flex-col md:border-r'
+  class='fixed bottom-0 z-50 flex h-[65px] w-screen shrink-0 items-center justify-center border-t bg-white md:sticky md:top-0 md:h-screen md:w-[65px] md:flex-col md:border-r dark:border-t-primary dark:bg-primary dark:md:border-r-primary'
 >
   <ul class='flex w-full items-center justify-between gap-6 px-6 md:flex-col md:justify-center'>
     <li>
