--- a/src/components/sections/stack/Software.astro
+++ b/src/components/sections/stack/Software.astro
@@ -3,33 +3,51 @@ import Item from '@/components/sections/stack/Item.astro'
 ---
 
 <section class='relative flex w-full flex-col'>
-  <header>
-    <h2 class='text-secondary lg:absolute lg:-left-24 lg:flex'>Software</h2>
+  <header class='mb-6 lg:mb-0'>
+    <h2 class='text-secondary lg:absolute lg:-left-28 lg:flex'>Software</h2>
   </header>
   <div class='grid grid-cols-2 gap-2 sm:grid-cols-3'>
     <Item
-      img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
+      img='Arc'
       title='Arc'
+      tag='Buscador'
+      type='software'
+      href='https://arc.net/gift/cce84c0b'
     />
     <Item
-      img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
+      img='VSCode'
       title='VS Code'
+      tag='Código'
+      type='software'
+      href='https://code.visualstudio.com/'
     />
     <Item
-      img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
+      img='Warp'
       title='Warp'
+      tag='Terminal'
+      type='software'
+      href='https://app.warp.dev/referral/RVJ9PY'
     />
     <Item
-      img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
+      img='Figma'
       title='Figma'
+      tag='Diseño'
+      type='software'
+      href='https://figma.com'
     />
     <Item
-      img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
+      img='Music'
       title='Apple Music'
+      tag='Música'
+      type='software'
+      href='https://music.apple.com/'
     />
     <Item
-      img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
-      title='Arc Browser'
+      img='Discord'
+      title='Discord'
+      tag='Comunicación'
+      type='software'
+      href='https://discord.com/'
     />
   </div>
 </section>
