--- a/src/components/CmdK.astro
+++ b/src/components/CmdK.astro
@@ -18,7 +18,7 @@ import Cmd from '@/icons/Cmd.astro'
       --ninja-backdrop-filter: none;
       --ninja-overflow-background: rgba(0, 0, 0, 0.7);
       --ninja-text-color: #7d7d7d;
-      --ninja-accent-color: rgb(110, 94, 210);
+      --ninja-accent-color: #2e2e2e;
       --ninja-secondary-background-color: rgba(51, 51, 51, 0.44);
       --ninja-secondary-text-color: #888;
       --ninja-selected-text-color: #eaeaea;
@@ -28,7 +28,7 @@ import Cmd from '@/icons/Cmd.astro'
       --ninja-modal-shadow: 0 16px 70px rgba(0, 0, 0, 0.2);
       --ninja-group-text-color: rgb(144, 149, 157);
       --ninja-footer-background: rgba(30, 30, 30, 85%);
-      --ninja-modal-background: #131313;
+      --ninja-modal-background: #232323;
     }
   }
 </style>
@@ -42,7 +42,9 @@ import Cmd from '@/icons/Cmd.astro'
     LinkedIn:
       '<svg  style="margin-right:.5rem;" height="24"   width="24"   viewBox="0 0 24 24"   xmlns="http://www.w3.org/2000/svg"   ><title>LinkedIn</title><path     fill="currentColor"     d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"   ></path></svg >',
     GitHub:
-      '<svg  style="margin-right:.5rem;" width="24"   height="24"   viewBox="0 0 24 24"   xmlns="http://www.w3.org/2000/svg"   ><title>GitHub</title><path     fill="currentColor"     d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"   ></path></svg >'
+      '<svg  style="margin-right:.5rem;" width="24"   height="24"   viewBox="0 0 24 24"   xmlns="http://www.w3.org/2000/svg"   ><title>GitHub</title><path     fill="currentColor"     d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"   ></path></svg >',
+    Twitch:
+      '<svg style="margin-right:.5rem; xmlns="http://www.w3.org/2000/svg"  width="24"   height="24"  xml:space="preserve" id="Layer_1" x="0" y="0" style="enable-background:new 0 0 2400 2800" version="1.1" viewBox="0 0 2400 2800"><style>.st1{fill:currentColor}</style><path d="m2200 1300-400 400h-400l-350 350v-350H600V200h1600z" style="fill:#232323"/><g id="Layer_1-2"><path d="M500 0 0 500v1800h600v500l500-500h400l900-900V0H500zm1700 1300-400 400h-400l-350 350v-350H600V200h1600v1100z" class="st1"/><path d="M1700 550h200v600h-200zM1150 550h200v600h-200z" class="st1"/></g></svg>'
   }
 
   document.addEventListener('astro:page-load', () => {
@@ -61,7 +63,7 @@ import Cmd from '@/icons/Cmd.astro'
       {
         id: 'LinkedIn',
         title: ' Seguirme en LinkedIn',
-        hotkey: 'ctrl+C',
+        hotkey: 'ctrl+L',
         icon: SOCIAL_ICONS.LinkedIn,
         section: 'Redes sociales',
         handler: () => {
@@ -71,11 +73,21 @@ import Cmd from '@/icons/Cmd.astro'
       {
         id: 'GitHub',
         title: ' Seguirme en GitHub',
-        hotkey: 'ctrl+X',
+        hotkey: 'ctrl+G',
         icon: SOCIAL_ICONS.GitHub,
         section: 'Redes sociales',
         handler: () => {
           window.open('https://github.com/aaronperezaguilera', '_blank')
+        }
+      },
+      {
+        id: 'Twitch',
+        title: ' Seguirme en Twitch',
+        hotkey: 'ctrl+T',
+        icon: SOCIAL_ICONS.Twitch,
+        section: 'Redes sociales',
+        handler: () => {
+          window.open('https://www.twitch.tv/dotmdx', '_blank')
         }
       }
     ]
