--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,5 @@
 ---
 import { ViewTransitions } from 'astro:transitions'
-import { CommandPalette } from '@/components/CommandPalette.jsx'
 import '@fontsource/poppins'
 
 import Navbar from '@/components/Navbar.astro'
@@ -18,7 +17,7 @@ const { image, summary, url } = basics
 <!doctype html>
 <html
   lang='es'
-  class='dark:bg-primary relative scroll-p-8 scroll-smooth antialiased dark:text-white'
+  class='relative scroll-p-8 scroll-smooth antialiased dark:bg-primary dark:text-white'
 >
   <head>
     <meta charset='UTF-8' />
@@ -102,7 +101,6 @@ const { image, summary, url } = basics
   <body class='flex'>
     <Navbar />
     <slot />
-    <CommandPalette />
     <script>
       import tippy from 'tippy.js'
       import 'tippy.js/dist/tippy.css'
