--- a/src/pages/stack/index.astro
+++ b/src/pages/stack/index.astro
@@ -9,10 +9,15 @@ const { name, label } = basics
 
 <Layout title={`Portafolio de ${name} - ${label}`}>
   <main class='w-full px-6 pb-20 pt-6 md:pt-16'>
-    <div class='mx-auto flex max-w-[65ch] flex-col gap-8'>
-      <h1 class='text-4xl font-semibold'>Stack</h1>
-      <Hardware />
+    <div class='mx-auto flex max-w-[65ch] flex-col gap-6'>
+      <header class='flex flex-col gap-2'>
+        <h1 class='text-xl'>Stack</h1>
+        <p class='dark:text-prose text-pretty'>
+          Echa un vistazo a las aplicaciones y dispositivos que utilizo.
+        </p>
+      </header>
       <Software />
+      <Hardware />
     </div>
   </main>
 </Layout>
