--- a/src/components/sections/stack/Item.astro
+++ b/src/components/sections/stack/Item.astro
@@ -27,7 +27,7 @@ const Icon = SOFTWARE_ICONS[img]
     href={href}
     class='absolute left-0 top-0 h-full w-full rounded-lg'
   ></a>
-  <div class={`${type === 'software' ? 'h-32' : ''} flex w-full h-full justify-center pt-6`}>
+  <div class={`${type === 'software' ? 'h-32' : 'h-full'} flex w-full justify-center pt-6`}>
     {
       type === 'software' ? (
         <Icon />
