refactor: Update stack item layout in Item.astro

--- a/src/components/blog/Post.astro
+++ b/src/components/blog/Post.astro
@@ -2,9 +2,7 @@
 const { post } = Astro.props
 ---
 
-<article
-  class='relative rounded-lg bg-neutral-100 transition dark:bg-secondary dark:hover:bg-hover'
->
+<article class='relative rounded-lg bg-[#f8f8f8] transition dark:bg-secondary dark:hover:bg-hover'>
   <a
     href={`/blog/${post.slug}`}
     class='absolute h-full w-full'
