--- a/src/components/sections/Languages.astro
+++ b/src/components/sections/Languages.astro
@@ -33,4 +33,10 @@ import { languages } from '@cv'
     gap: 4px;
     padding: 0.2rem 0.6rem;
   }
+  @media (prefers-color-scheme: dark) {
+    li {
+      background: #282828;
+      color: white;
+    }
+  }
 </style>
