--- a/src/icons/GitHub.astro
+++ b/src/icons/GitHub.astro
@@ -1,7 +1,11 @@
+---
+const { ...props } = Astro.props
+---
+
 <svg
+  {...props}
   xmlns='http://www.w3.org/2000/svg'
   xmlns:xlink='http://www.w3.org/1999/xlink'
-  class='w-6'
   viewBox='0 0 20 21'
   id='svg2915360190'
   ><path
