--- a/src/pages/contacto/index.astro
+++ b/src/pages/contacto/index.astro
@@ -5,6 +5,10 @@ import { basics } from '@cv'
 const { name, label } = basics
 ---
 
-<Layout title={`Portafolio de ${name} - ${label}`}>
+<Layout
+  title={`Portafolio de ${name} - ${label}`}
+  description='Contacto'
+  img='/me.webp'
+>
   <main>Contacto</main>
 </Layout>
