--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -1,51 +1,26 @@
 ---
 import GitHub from '@/icons/GitHub.astro'
+import Post from '@/components/blog/Post.astro'
 import Section from '../Section.astro'
 
 import { projects } from '@cv'
+
+import { getCollection } from 'astro:content'
+const allPosts = await (await getCollection('blog'))
+  .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+  .slice(0, 2)
 ---
 
-<Section title='Proyectos'>
-  <ul>
-    {
-      projects.map(({ url, description, highlights, name, isActive, github }) => {
-        return (
-          <li>
-            <article>
-              <header>
-                <h3>
-                  <a
-                    href={url}
-                    target='_blank'
-                    title={`Ver el proyecto ${name}`}
-                  >
-                    {name}
-                  </a>
-                  {isActive && <span>•</span>}
-                  {github && (
-                    <a
-                      class='github-code-link'
-                      href={github}
-                      target='_blank'
-                      title={`Ver código fuente del proyecto ${name}`}
-                    >
-                      <GitHub />
-                    </a>
-                  )}
-                </h3>
-                <p>{description}</p>
-              </header>
-              <footer>
-                {highlights.map((highlight) => {
-                  return <span>{highlight}</span>
-                })}
-              </footer>
-            </article>
-          </li>
-        )
-      })
-    }
-  </ul>
+<Section title='Artículos'>
+  <div class='flex flex-col gap-2'>
+    {allPosts.map((post) => <Post post={post} />)}
+  </div>
+  <a
+    href='/blog'
+    class='mt-2 flex w-full items-center justify-center rounded-lg border bg-[#f8f8f8] py-2 transition dark:border-primary dark:bg-secondary dark:hover:bg-hover'
+  >
+    Ver todos los artículos
+  </a>
 </Section>
 
 <style>
