--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -1,21 +1,21 @@
 ---
-import Section from "../Section.astro"
-import HTML from "@/icons/html.astro"
-import CSS from "@/icons/css.astro"
-import JavaScript from "@/icons/javascript.astro"
-import TypeScript from "@/icons/type.astro"
-import React from "@/icons/react.astro"
-import Node from "@/icons/node.astro"
-import MySQL from "@/icons/sql.astro"
-import Git from "@/icons/git.astro"
-import GitHub from "@/icons/GitHub.astro"
-import Tailwind from "@/icons/tailwind.astro"
-import Next from "@/icons/next.astro"
-import { skills } from "@cv"
-import Swift from "@/icons/swift.astro"
-import SwiftUI from "@/icons/swiftui.astro"
-import Kotlin from "@/icons/kotlin.astro"
-import Flutter from "@/icons/flutter.astro"
+import Section from '../Section.astro'
+import HTML from '@/icons/html.astro'
+import CSS from '@/icons/css.astro'
+import JavaScript from '@/icons/javascript.astro'
+import TypeScript from '@/icons/type.astro'
+import React from '@/icons/react.astro'
+import Node from '@/icons/node.astro'
+import MySQL from '@/icons/sql.astro'
+import Git from '@/icons/git.astro'
+import GitHub from '@/icons/GitHub.astro'
+import Tailwind from '@/icons/tailwind.astro'
+import Next from '@/icons/next.astro'
+import { skills } from '@cv'
+import Swift from '@/icons/swift.astro'
+import SwiftUI from '@/icons/swiftui.astro'
+import Kotlin from '@/icons/kotlin.astro'
+import Flutter from '@/icons/flutter.astro'
 
 const SKILLS_ICONS: Record<string, any> = {
   HTML,
@@ -32,20 +32,20 @@ const SKILLS_ICONS: Record<string, any> = {
   Swift,
   SwiftUI,
   Kotlin,
-  Flutter,
+  Flutter
 }
 ---
 
-<Section title="Habilidades">
+<Section title='Habilidades'>
   <ul>
     {
       skills.map(({ name }) => {
-        const iconName = name === "Next.js" ? "Next" : name
+        const iconName = name === 'Next.js' ? 'Next' : name
         const Icon = SKILLS_ICONS[iconName]
 
         return (
           <li>
-            {Icon && <Icon />} <span>{name}</span>
+            {Icon && <Icon class='w-4' />} <span class='ml-1'>{name}</span>
           </li>
         )
       })
@@ -70,5 +70,11 @@ const SKILLS_ICONS: Record<string, any> = {
     font-weight: 500;
     gap: 4px;
     padding: 0.2rem 0.6rem;
+  }
+  @media (prefers-color-scheme: dark) {
+    li {
+      background: #282828;
+      color: white;
+    }
   }
 </style>
