--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,15 +3,23 @@ import { ViewTransitions } from 'astro:transitions'
 import '@fontsource/poppins'
 
 import Navbar from '@/components/Navbar.astro'
+import SEO from '@/components/SEO.astro'
+
 import { basics } from '@cv'
 
 interface Props {
   title: string
 }
 
-const { title } = Astro.props
-
 const { image, summary, url } = basics
+
+interface Props {
+  title: string
+  description: string
+  canonical?: string
+  img: string
+}
+const { title, description, img } = Astro.props
 ---
 
 <!doctype html>
@@ -20,81 +28,10 @@ const { image, summary, url } = basics
   class='relative scroll-p-8 scroll-smooth antialiased dark:bg-primary dark:text-white'
 >
   <head>
-    <meta charset='UTF-8' />
-    <title>{title}</title>
-    <meta
-      name='description'
-      content={summary}
-    />
-    <meta
-      name='viewport'
-      content='width=device-width'
-    />
-    <link
-      rel='icon'
-      type='image/svg+xml'
-      href='/favicon.svg'
-    />
-    <link
-      rel='preload'
-      as='image'
-      href={image}
-    />
-
-    <meta
-      property='og:url'
-      content={url}
-    />
-    <meta
-      property='og:type'
-      content='website'
-    />
-    <meta
-      property='og:title'
-      content={title}
-    />
-    <meta
-      property='og:description'
-      content={summary}
-    />
-    <meta
-      property='og:image'
-      content={image}
-    />
-
-    <meta
-      name='twitter:card'
-      content='summary_large_image'
-    />
-    <meta
-      property='twitter:domain'
-      content={url.split('//')[1] ?? ''}
-    />
-    <meta
-      property='twitter:url'
-      content={url}
-    />
-    <meta
-      name='twitter:title'
-      content={title}
-    />
-    <meta
-      name='twitter:description'
-      content={summary}
-    />
-    <meta
-      name='twitter:image'
-      content={image}
-    />
-    <meta
-      name='theme-color'
-      media='(prefers-color-scheme: light)'
-      content='white'
-    />
-    <meta
-      name='theme-color'
-      media='(prefers-color-scheme: dark)'
-      content='#232323'
+    <SEO
+      title={title}
+      description={description}
+      img={img}
     />
     <ViewTransitions />
   </head>
