--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,11 @@ import { basics } from '@cv'
 const { name, label } = basics
 ---
 
-<Layout title={`Portafolio de ${name} - ${label}`}>
+<Layout
+  title={`Portafolio de ${name} - ${label}`}
+  description='Mi viaje a través del desarrollo web y el eCommerce.'
+  img='/me.webp'
+>
   <main class='w-full px-6 pb-[65px] pt-6 md:pt-[65px]'>
     <Hero />
     <About />
