refactor: Update 404 page layout and metadata

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,7 +3,11 @@ import Layout from '../layouts/Layout.astro'
 import Section from '@/components/Section.astro'
 ---
 
-<Layout title='Página no encontrada'>
+<Layout
+  title='Página no encontrada'
+  description='Página no encontrada'
+  img='/me.webp'
+>
   <main>
     <Section>
       <h1>404</h1>
