--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -16,8 +16,8 @@ import Back from '@/icons/Back.astro'
         href='/blog'
         class='flex items-center'
       >
-        <Back />Volver al blog</a
-      >
+        <Back />Volver al blog
+      </a>
     </header>
     <slot />
   </main>
