refactor: Add missing alt text and visually hidden text for accessibility improvements

--- a/src/components/CmdK.astro
+++ b/src/components/CmdK.astro
@@ -5,7 +5,7 @@ import Cmd from '@/icons/Cmd.astro'
 <button
   class='text-neutral-500 transition hover:text-neutral-800 dark:text-neutral-600 dark:hover:text-neutral-200'
   id='cmd-button'
-  ><Cmd /></button
+  ><Cmd /><span class='sr-only'>Paleta de comandos</span></button
 ><ninja-keys
   placeholder='Escribe un comando o busca una acción...'
   hideBreadcrumbs
