refactor: Update blog page header links for RSS feed and filter functionality

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -25,10 +25,8 @@ const allPosts = await (
         <header class='flex items-center justify-between pt-6 md:pt-[65px]'>
           <h1 class='text-xl'>Blog</h1>
           <div class='flex items-center gap-2'>
-            <a href=''> <Rss /> </a>
-            <button class=''>
-              <Filter />
-            </button>
+            <a href='/rss.xml'> <Rss /> </a>
+            <Filter />
           </div>
         </header>
         <div class='mb-16 flex flex-col gap-2 sm:mb-0'>
