refactor: Update social icons in Hero section for consistent size

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -76,7 +76,7 @@ const SOCIAL_ICONS: SocialIcon = {
                 data-tippy-content={network}
                 data-tippy-placement='bottom'
               >
-                <Icon />
+                <Icon class='w-6' />
               </a>
             )
           })
