--- a/src/icons/Twitch.astro
+++ b/src/icons/Twitch.astro
@@ -7,13 +7,14 @@
   style='enable-background:new 0 0 2400 2800'
   version='1.1'
   viewBox='0 0 2400 2800'
+  class='w-6'
   ><style>
     .st1 {
       fill: currentColor;
     }
   </style><path
     d='m2200 1300-400 400h-400l-350 350v-350H600V200h1600z'
-    class='dark:fill-primary fill-white'
+    class='fill-white dark:fill-primary'
   ></path><g id='Layer_1-2'
     ><path
       d='M500 0 0 500v1800h600v500l500-500h400l900-900V0H500zm1700 1300-400 400h-400l-350 350v-350H600V200h1600v1100z'
