--- a/src/components/blog/Post.astro
+++ b/src/components/blog/Post.astro
@@ -1,8 +1,13 @@
 ---
+import Fixed from '@/icons/Fixed.astro'
+
 const { post } = Astro.props
 ---
 
-<article class='relative rounded-lg bg-[#f8f8f8] transition dark:bg-secondary dark:hover:bg-hover'>
+<article
+  class='relative rounded-lg bg-[#f8f8f8] transition dark:bg-secondary dark:hover:bg-hover'
+  transition:name={post.slug}
+>
   <a
     href={`/blog/${post.slug}`}
     class='absolute h-full w-full'
@@ -10,7 +15,10 @@ const { post } = Astro.props
     <span class='sr-only'>{post.data.title}</span></a
   >
   <div class='flex flex-col justify-between gap-4 text-pretty p-4'>
-    <h2>{post.data.title}</h2>
+    <header class='flex items-center justify-between'>
+      <h2>{post.data.title}</h2>
+      {post.data.fixed && <Fixed />}
+    </header>
     <p class='line-clamp-2 text-sm text-neutral-400'>{post.data.description}</p>
     <footer class='flex justify-between text-sm text-neutral-300'>
       {
