--- a/src/pages/blog/guias.astro
+++ b/src/pages/blog/guias.astro
@@ -7,13 +7,13 @@ import Layout from '@/layouts/Layout.astro'
 import { getCollection } from 'astro:content'
 const allPosts = await (await getCollection('blog'))
   .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
-  .filter((post) => post.data.fixed !== true)
+  .filter((post) => post.data.fixed !== true && post.data.contentType === 'guia')
 
 const fixedPost = await (
   await getCollection('blog')
 )
   .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
-  .filter((post) => post.data.fixed === true)
+  .filter((post) => post.data.fixed === true && post.data.contentType === 'guia')
   .slice(0, 1)
 ---
 
