refactor: Update blog page header links for consistency and functionality

--- a/src/components/blog/BlogHeader.astro
+++ b/src/components/blog/BlogHeader.astro
@@ -7,7 +7,7 @@ import Rss from '@/icons/Rss.astro'
   <h1 class='text-xl'>Blog</h1>
   <nav>
     <ul class='flex gap-6 text-sm'>
-      <li><a href='/blog'> Todos los artículos </a></li>
+      <li><a href='/blog'> Todo </a></li>
       <li><a href='/blog/guias'> Guías </a></li>
       <li><a href='/blog/opiniones'> Opiniones </a></li>
     </ul>
