refactor: Update blog page header links for consistency and functionality

--- a/src/components/blog/BlogHeader.astro
+++ b/src/components/blog/BlogHeader.astro
@@ -6,7 +6,7 @@ import Rss from '@/icons/Rss.astro'
 <header class='flex items-center justify-between pt-6 md:pt-[65px]'>
   <h1 class='text-xl'>Blog</h1>
   <nav>
-    <ul class='flex gap-6 text-sm'>
+    <ul class='flex gap-4 text-sm sm:gap-6'>
       <li><a href='/blog'> Todo </a></li>
       <li><a href='/blog/guias'> Guías </a></li>
       <li><a href='/blog/opiniones'> Opiniones </a></li>
