--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,7 +1,7 @@
 ---
+import BlogFooter from '@/components/blog/BlogFooter.astro'
 import BlogHeader from '@/components/blog/BlogHeader.astro'
 import Post from '@/components/blog/Post.astro'
-import Bmc from '@/icons/Bmc.astro'
 import Layout from '@/layouts/Layout.astro'
 
 import { getCollection } from 'astro:content'
@@ -35,16 +35,7 @@ const fixedPost = await (
         </div>
       </section>
     </div>
-    <footer
-      class='sticky bottom-[65px] h-[65px] w-full bg-white/80 backdrop-blur md:bottom-0 dark:bg-primary/80'
-    >
-      <a
-        href='/'
-        class='mx-auto flex h-full w-full max-w-[65ch] items-center justify-center gap-2 border-t dark:border-t-primary'
-      >
-        <Bmc /> <span>Invítame a un café</span></a
-      >
-    </footer>
+    <BlogFooter />
   </main>
 </Layout>
 
