--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -4,7 +4,7 @@ import Section from '../Section.astro'
 import { work } from '@cv'
 ---
 
-<Section title='Experiencia laboral'>
+<Section title='Experiencia'>
   <ul>
     {
       work.map(({ name, startDate, endDate, position, summary, highlights, url }) => {
@@ -63,22 +63,8 @@ import { work } from '@cv'
     gap: 32px;
   }
 
-  article h3 {
-    font-weight: 500;
-    color: #fff;
-  }
-
-  article a {
-    color: #fff;
-  }
-
   article a:hover {
     text-decoration: underline;
-  }
-
-  article h4 {
-    color: #fff;
-    font-weight: 400;
   }
 
   header {
@@ -86,47 +72,6 @@ import { work } from '@cv'
     justify-content: space-between;
     align-items: flex-start;
     margin-bottom: 4px;
-  }
-
-  time {
-    color: #fff;
-    font-size: 0.85rem;
-    min-width: 102px;
-    cursor: default;
-  }
-
-  [data-title]:hover:after {
-    opacity: 1;
-    transition: all 0.1s ease-in-out 0.5s;
-    visibility: visible;
-  }
-
-  [data-title]:after {
-    content: attr(data-title);
-    background-color: #fff;
-    color: #fff;
-    font-size: 0.75rem;
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      'Courier New',
-      monospace;
-    position: absolute;
-    padding: 0.2rem 0.5rem;
-    bottom: -1.4rem;
-    left: 50%;
-    white-space: nowrap;
-    box-shadow: 1px 1px 1px #222222;
-    opacity: 0;
-    border: 1px solid #111111;
-    z-index: 99999;
-    visibility: hidden;
-    border-radius: 6px;
-  }
-
-  [data-title] {
-    position: relative;
   }
 
   @media (width <= 700px) {
