--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,6 +22,7 @@ const { name, label } = basics
     <Hero />
     <About />
     <Education />
+    <Experience />
     <Projects />
     <Languages />
     <Skills />
