--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions'
 import '@fontsource/poppins'
 
 import Navbar from '@/components/Navbar.astro'
@@ -28,6 +29,7 @@ const { title, description, img } = Astro.props
       description={description}
       img={img}
     />
+    <ViewTransitions />
   </head>
   <body class='flex'>
     <Navbar />
