refactor: Add target and rel attributes to stack item link

--- a/src/components/sections/stack/Item.astro
+++ b/src/components/sections/stack/Item.astro
@@ -26,6 +26,8 @@ const Icon = SOFTWARE_ICONS[img]
   <a
     href={href}
     class='absolute left-0 top-0 h-full w-full rounded-lg'
+    target='_blank'
+    rel='noopener noreferrer'
   ></a>
   <div class={`${type === 'software' ? 'h-32' : 'h-full'} flex w-full justify-center pt-6`}>
     {
