--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -34,7 +34,7 @@ const { Content } = await entry.render()
     />
   </header>
   <section
-    class='sl-markdown-content prose mx-auto mb-[65px] mt-6 w-full dark:prose-invert prose-p:text-pretty prose-pre:w-full prose-img:rounded-xl'
+    class='sl-markdown-content prose mx-auto mt-6 w-full dark:prose-invert prose-p:text-pretty prose-pre:w-full prose-img:rounded-xl'
   >
     <Content />
   </section>
