--- a/src/components/blog/BlogFooter.astro
+++ b/src/components/blog/BlogFooter.astro
@@ -6,8 +6,11 @@ import Bmc from '@/icons/Bmc.astro'
   class='sticky bottom-[65px] h-[65px] w-full bg-white/80 backdrop-blur md:bottom-0 dark:bg-primary/80'
 >
   <a
-    href='/'
     class='mx-auto flex h-full w-full max-w-[65ch] items-center justify-center gap-2 border-t dark:border-t-primary'
+    role='link'
+    href='https://www.buymeacoffee.com/dotmd'
+    rel='noopener noreferrer'
+    target='_blank'
   >
     <Bmc /> <span>Invítame a un café</span></a
   >
