--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,4 +1,5 @@
 ---
+import Views from '@/components/blog/Views'
 import BlogLayout from '@/layouts/BlogLayout.astro'
 
 import { getCollection } from 'astro:content'
@@ -17,16 +18,24 @@ const { Content } = await entry.render()
 
 <BlogLayout frontmatter={entry.data}>
   <header class='mx-auto max-w-[65ch]'>
-    <h1 class='text-pretty text-2xl'>{entry.data.title}</h1>
-    <small class='text-sm text-secondary'
+    <div class='flex w-full justify-between'>
+      <h1 class='text-pretty text-2xl'>{entry.data.title}</h1>
+      <Views
+        slug={entry.slug}
+        increment
+        client:load
+      />
+    </div>
+    <date class='text-sm text-secondary'
       >{
         entry.data.pubDate.toLocaleDateString('es-ES', {
           day: 'numeric',
           month: 'long',
           year: 'numeric'
         })
-      }</small
+      }</date
     >
+
     <img
       src={entry.data.image.url}
       alt={entry.data.title}
