--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -4,6 +4,7 @@ const { frontmatter } = Astro.props
 import Layout from '@/layouts/Layout.astro'
 import Back from '@/icons/Back.astro'
 import Share from '@/components/blog/Share.astro'
+import Views from '@/components/blog/Views'
 ---
 
 <Layout
@@ -12,13 +13,18 @@ import Share from '@/components/blog/Share.astro'
   img={frontmatter.image.url}
 >
   <main class='flex w-full flex-col gap-6 px-6'>
-    <header class='mx-auto w-full max-w-[65ch] pt-6 md:pt-[65px]'>
+    <header class='mx-auto flex w-full max-w-[65ch] items-center justify-between pt-6 md:pt-[65px]'>
       <a
         href='/blog'
         class='flex items-center'
       >
         <Back />Volver al blog
       </a>
+      <Views
+        slug={frontmatter.slug}
+        increment
+        client:load
+      />
     </header>
     <slot />
     <Share />
