--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -15,7 +15,10 @@ const { entry } = Astro.props
 const { Content, remarkPluginFrontmatter } = await entry.render()
 ---
 
-<BlogLayout frontmatter={entry.data}>
+<BlogLayout
+  frontmatter={entry.data}
+  slug={entry.slug}
+>
   <header class='mx-auto max-w-[65ch]'>
     <h1 class='text-pretty text-2xl'>{entry.data.title}</h1>
     <date class='text-sm text-secondary'
