--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -28,7 +28,7 @@ import { work } from '@cv'
                   <h4>{position}</h4>
                 </div>
 
-                <div>
+                <div class=' text-right'>
                   <time
                     datetime={startDate}
                     data-title={startDate}
@@ -70,7 +70,6 @@ import { work } from '@cv'
   header {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
     margin-bottom: 4px;
   }
 
