--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,7 @@ const { name, label } = basics
   <main class='w-full px-6 pb-[65px] pt-6 md:pt-[65px]'>
     <Hero />
     <About />
+    <Experience />
     <Education />
     <Projects />
     <Languages />
