--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -40,7 +40,7 @@ const date = entry.data.pubDate.toLocaleDateString('es-ES', {
     />
   </header>
   <section
-    class='sl-markdown-content prose mx-auto mt-6 w-full dark:prose-invert prose-p:text-pretty prose-pre:w-full prose-img:rounded-xl'
+    class='sl-markdown-content prose mx-auto w-full dark:prose-invert prose-p:text-pretty prose-pre:w-full prose-img:rounded-xl'
   >
     <Content />
   </section>
