refactor: Add lazy loading for blog post images

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -36,7 +36,7 @@ const date = entry.data.pubDate.toLocaleDateString('es-ES', {
     <img
       src={entry.data.image.url}
       alt={entry.data.title}
-      class='mt-6 w-full rounded-lg'
+      class='mt-6 aspect-video w-full rounded-lg'
     />
   </header>
   <section
