--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -42,7 +42,7 @@ import CmdK from '@/components/CmdK.astro'
         </li>-->
     <li>
       <NavLink
-        href='mailto:aaronperezaguilera@gmail.com'
+        href='mailto:aaron@dotmd.io'
         tooltip='Contacto'
         ><Contact /></NavLink
       >
