refactor: Update page description to include portfolio details

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const { name, label } = basics
 
 <Layout
   title={`Portafolio de ${name} - ${label}`}
-  description='Mi viaje a través del desarrollo web y el eCommerce.'
+  description={`Mi viaje a través del desarrollo web y el eCommerce. Portafolio de ${name} - ${label}`}
   img='/me.webp'
 >
   <main class='w-full px-6 pb-[65px] pt-6 md:pt-[65px]'>
