--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -8,7 +8,7 @@ import CmdK from '@/components/CmdK.astro'
 ---
 
 <nav
-  class='fixed bottom-0 z-50 flex h-[65px] w-screen shrink-0 items-center justify-center border-t bg-white md:sticky md:top-0 md:h-screen md:w-[65px] md:flex-col md:border-r dark:border-t-primary dark:bg-primary dark:md:border-r-primary'
+  class='fixed bottom-0 z-50 flex h-[65px] w-screen shrink-0 items-center justify-center border-t bg-white md:sticky md:top-0 md:h-screen md:w-[65px] md:flex-col md:border-r dark:border-t-primary dark:bg-primary dark:md:border-r-primary print:hidden'
 >
   <ul class='flex w-full items-center justify-between gap-6 px-6 md:flex-col md:justify-center'>
     <li>
