--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -11,7 +11,10 @@ const allPosts = await (await getCollection('blog'))
   .slice(0, 2)
 ---
 
-<Section title='Artículos'>
+<Section
+  title='Artículos'
+  className='print:hidden'
+>
   <div class='flex flex-col gap-2'>
     {allPosts.map((post) => <Post post={post} />)}
   </div>
